--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 /**** Google Fonts import *****/
-@import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;300;400;600;700;900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap');
 
 /**** Root style definition *****/
 * {
@@ -16,7 +16,7 @@ h3,
 h4,
 h5,
 h6 {
-  color: #000d6b;
+  color: #3C1874;
   font-weight: 600;
   margin-bottom: 0;
 }
