--- a/src/styles/common-section.css
+++ b/src/styles/common-section.css
@@ -1,8 +1,8 @@
 .common__section {
-    background: linear-gradient(rgb(0, 13, 107, 0.6), rgb(0, 13, 107, 0.6)),
-      url("../assets/images/general.jpg");
-    background-position: center;
+    background: linear-gradient(rgba(63,63,63,0.5), rgba(112,112,112,0.5)),
+      url("../assets/images/drive.jpg");
+    background-position: 0px 0px;
     background-size: cover;
     background-repeat: no-repeat;
-    padding: 80px 0px;
+    padding: 100px 0px;
 }
