--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -1,14 +1,13 @@
 .social__link-icon {
     text-decoration: none;
-  
-    color: #000d6b;
+    color: #F1B24A;
     font-weight: 500;
     font-size: 1.2rem;
   }
   
   .contact__btn {
     padding: 7px 15px;
-    background: #000d6b;
+    background: #F1B24A;
     color: #fff;
     border: none;
     outline: none;
